# xangi-stackchan

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
docs/: EVENTS.md  scservo_protocol.md  usage.md  xangi_bridge_protocol.md
firmware/: README.md  platformio.ini
firmware/examples/atoms3r/main/: main.cpp
firmware/examples/cores3/main/: clock_overlay.cpp  clock_overlay.h  main.cpp  nade_voices.h
firmware/k151/: .gitignore  README.md  platformio.ini
firmware/k151/examples/AtomVoiceBridge/: main.cpp
firmware/k151/examples/HomeCalibration/: main.cpp
firmware/k151/examples/SetAngleDemo/: main.cpp
firmware/k151/src/: main.cpp
firmware/lib/si12t/: Si12T.cpp  Si12T.h  library.json
firmware/scripts/: patch_m5stack_avatar.py
scripts/: dance_demo.py  gen_nade_voices.py  setup_piper.sh  test_voice_conversation.py  test_xangi_bridge.py
src/xangi_stackchan/: __init__.py  app.py  app_types.py  auth.py  dance.py  events.py  head_pet.py  mac_mic.py  serial_actor.py  settings.py  settings_server.py  sprite_face.py  stackchan.py  stt.py  tts.py  voice_conversation.py
tests/: test_auth.py  test_clock_sync.py  test_dance.py  test_device_profile.py  test_events.py  test_head_pet.py  test_head_touch_firmware_settings.py  test_hourly_chime.py  test_puzzle_light.py  test_serial_reconnect.py  test_serial_write_timeout.py  test_settings.py  test_settings_server.py  test_simulator.py  test_sprite_face.py  test_time_face.py  test_tts.py  test_voice_grace.py  test_voice_mac_input.py  test_voice_no_pcm.py
udev/: 99-xangi-stackchan.rules
(+5 files in other folders)
